--- a/index.html
+++ b/index.html
@@ -279,8 +279,7 @@
         <!-- Contact Section End -->
     </main>
     <footer id="footer">
-        <p>Copyright &copy; 2023 All rights reserved | made by <b> <a href="https://mohamedelkashef.com "
-                    target="_blank"> Mohamed Elkashef</a> </b></p>
+        <p>Copyright &copy; 2022 | made by <b>Wided Boukouba</b></p>
     </footer>
 </body>
 
